Fixed visual bug on mobile

--- a/main.css
+++ b/main.css
@@ -521,7 +521,7 @@ span {
         padding-bottom: 2rem;
     }
 
-    .proj_img, .proj_img2 {
+    .proj_img, .proj_img2, .proj_img3 {
         width: 100%;
         height: auto;
         float: none;
